crates/function-metrics/tests/ui/fail/unknown_metric.rs
use function_metrics::function_metrics;

#[function_metrics(metrics(histogram))]
fn unknown() {}

fn main() {}
