crates/function-metrics/tests/ui/fail/unknown_metric.stderr
error: expected `duration`, `calls`, or `errors`
 --> tests/ui/fail/unknown_metric.rs:3:28
  |
3 | #[function_metrics(metrics(histogram))]
  |                            ^^^^^^^^^
